# i

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  biome.json  compose.prod.yaml  compose.yaml  justfile  openapi.json  package.json  rust-toolchain.toml  tsconfig.base.json  turbo.json
.cargo/: config.toml
.github/workflows/: ci.yml
apps/admin/: Dockerfile  next.config.ts  package.json
apps/admin/app/: layout.tsx  page.tsx
apps/admin/components/: auth.tsx  domain-editor.tsx  domain-list.tsx  domains.ts  markdown.tsx  post-editor.tsx  post-list.tsx  shell.tsx
apps/web/: Dockerfile  live2d.d.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/blog/: page.tsx
apps/web/app/blog/[slug]/: page.tsx
apps/web/components/: Live2DMascot.tsx  Markdown.tsx
apps/web/components/sections/: MascotSlot.tsx  TrackingCard.tsx
apps/web/lib/: i18n.ts
apps/web/messages/: zh.json
apps/web/src/: instrumentation.ts  live2d.d.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(site)/: layout.tsx  page.tsx
apps/web/src/app/(site)/blog/: page.tsx
apps/web/src/app/(site)/blog/[slug]/: page.tsx
apps/web/src/app/(site)/device/: page.tsx
apps/web/src/app/(site)/friends/: page.tsx
apps/web/src/app/(site)/gallery/: page.tsx
apps/web/src/app/(site)/maimai/: page.tsx
apps/web/src/app/(site)/moments/: page.tsx
apps/web/src/app/(site)/monitor/: page.tsx
apps/web/src/app/(site)/movie/: page.tsx
apps/web/src/app/(site)/music/: page.tsx
apps/web/src/app/(site)/touhou/: page.tsx
apps/web/src/app/(site)/vn/: page.tsx
apps/web/src/app/api/gallery/files/[key]/: route.ts
apps/web/src/app/api/gallery/upload/: route.ts
apps/web/src/app/api/trpc/[trpc]/: route.ts
apps/web/src/app/dash/(admin)/: layout.tsx  page.tsx
apps/web/src/app/dash/(admin)/[domain]/: page.tsx
apps/web/src/app/dash/(admin)/maimai/: page.tsx
apps/web/src/app/dash/(admin)/settings/: page.tsx
apps/web/src/app/dash/login/: page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/dash/: domain-admin.tsx  shell.tsx
apps/web/src/components/hexo/: btn.tsx  content.tsx  dplayer.tsx  gallery-group.tsx  gallery.tsx  hide-toggle.tsx  meting.tsx  note.tsx  tabs.tsx  timeline.tsx
apps/web/src/components/public/: collection.tsx  comments.tsx  live2d-mascot.tsx  mascot.tsx  site-header.tsx  visitor-auth.tsx
apps/web/src/lib/: admin-fields.ts  adx.ts  auth-client.ts  auth.ts  maimai.ts  s3.ts
apps/web/src/lib/hexo/: preprocess.ts
apps/web/src/lib/trpc/: client.tsx  server.ts
apps/web/src/server/: crud.ts  monitor-scheduler.ts  root.ts  trpc.ts
apps/web/src/server/routers/: comment.ts  content.ts  health.ts  maimai.ts  monitor.ts  page.ts  post.ts
crates/analytics/: Cargo.toml
crates/analytics/src/: lib.rs
crates/anime/: Cargo.toml
crates/anime/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/blog/: Cargo.toml
crates/blog/src/: lib.rs
crates/comments/: Cargo.toml
crates/comments/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml  build.rs
crates/db/src/: lib.rs
crates/device/: Cargo.toml
crates/device/src/: lib.rs
crates/friends/: Cargo.toml
crates/friends/src/: lib.rs
crates/gal/: Cargo.toml
crates/gal/src/: lib.rs
crates/gallery/: Cargo.toml
crates/gallery/src/: lib.rs
crates/maimai/: Cargo.toml
crates/maimai/src/: lib.rs
crates/moments/: Cargo.toml
crates/moments/src/: lib.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs
crates/movie/: Cargo.toml
crates/movie/src/: lib.rs
crates/music/: Cargo.toml
crates/music/src/: lib.rs
crates/touhou/: Cargo.toml
crates/touhou/src/: lib.rs
deploy/: Caddyfile.example  README.md
deploy/nginx/: default.conf
migrations/: 0001_init.sql  0002_movie.sql  0003_touhou.sql  0004_device.sql  0005_anime.sql  0006_moments.sql  0007_gallery.sql  0008_friends.sql  0009_monitor_checks.sql
services/api/: Cargo.toml  Dockerfile
services/api/src/: main.rs
