[workspace]
resolver = "2"
members = [
    "services/api",
    "crates/core",
    "crates/db",
    "crates/auth",
    "crates/analytics",
    "crates/blog",
    "crates/music",
    "crates/gal",
    "crates/movie",
    "crates/touhou",
    "crates/device",
    "crates/comments",
    "crates/monitor",
    "crates/maimai",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Asuna <xuyuning0430@gmail.com>"]
repository = "https://github.com/AdingApkgg/i"

# Shared dependency versions for every crate in the workspace.
# A crate opts in with e.g. `axum = { workspace = true }`.
[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "migrate",
] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

# Internal crates
i-core = { path = "crates/core" }
i-db = { path = "crates/db" }
i-auth = { path = "crates/auth" }
i-analytics = { path = "crates/analytics" }
i-blog = { path = "crates/blog" }
i-music = { path = "crates/music" }
i-gal = { path = "crates/gal" }
i-movie = { path = "crates/movie" }
i-touhou = { path = "crates/touhou" }
i-device = { path = "crates/device" }
i-comments = { path = "crates/comments" }
i-monitor = { path = "crates/monitor" }
i-maimai = { path = "crates/maimai" }

[profile.dev]
# Faster incremental dev builds inside the container.
debug = 1
