[workspace]
resolver = "2"
members = [
    "services/api",
    "crates/core",
    "crates/db",
    "crates/auth",
    "crates/analytics",
    "crates/blog",
    "crates/music",
    "crates/gal",
    "crates/movie",
    "crates/touhou",
    "crates/device",
    "crates/comments",
    "crates/monitor",
    "crates/maimai",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Asuna <xuyuning0430@gmail.com>"]
repository = "https://github.com/AdingApkgg/i"

# Shared dependency versions for every crate in the workspace.
# A crate opts in with e.g. `axum = { workspace = true }`.
[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "migrate",
] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

# Internal crates
i-core = { path = "crates/core" }
i-db = { path = "crates/db" }
i-auth = { path = "crates/auth" }
i-analytics = { path = "crates/analytics" }
i-blog = { path = "crates/blog" }
i-music = { path = "crates/music" }
i-gal = { path = "crates/gal" }
i-movie = { path = "crates/movie" }
i-touhou = { path = "crates/touhou" }
i-device = { path = "crates/device" }
i-comments = { path = "crates/comments" }
i-monitor = { path = "crates/monitor" }
i-maimai = { path = "crates/maimai" }

[profile.dev]
# Faster dev builds inside the container.
#
# debug = 1: line tables only (enough for backtraces) instead of full debuginfo,
#   which together with split-debuginfo=unpacked (.cargo/config.toml) keeps the
#   final link cheap.
# incremental = false: sccache cannot cache incremental compilation and silently
#   disables itself when it's on. We turn incremental OFF so RUSTC_WRAPPER=sccache
#   gets full crate-level cache hits — a warm rebuild after editing one crate only
#   recompiles that crate + the `api` bin, everything else is a cache hit. On 128
#   cores the lost intra-crate incrementality is dwarfed by the cache wins.
debug = 1
incremental = false
# Spread codegen across many cores within each crate (default for dev is 256 on
# new cargo; pinning keeps it parallel even on older toolchains).
codegen-units = 256

# Dependencies are rebuilt rarely; compile them with optimizations so the dev
# binary (sqlx/tokio/axum heavy) runs at a usable speed, without slowing down
# the inner edit-compile loop on first-party crates (which stay at opt-level 0).
[profile.dev.package."*"]
opt-level = 1

[profile.release]
# Build-speed first. LTO is OFF: thin-LTO is largely single-threaded, re-runs on
# every rebuild, and runs AFTER sccache (so it's uncacheable) — it turned a
# one-line change into a ~9-minute relink with 127 of 128 cores idle. Without it,
# codegen fans out across all cores and mold links in a blink. The runtime cost
# is negligible for an I/O-bound axum API.
lto = false
# Max codegen parallelism across the 128 cores (vs the LTO-friendly 16).
codegen-units = 256
debug = "line-tables-only"
strip = "debuginfo"
