[package]
name = "i-analytics"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "analytics"
path = "src/lib.rs"

[dependencies]
i-core = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }
