[package]
name = "i-auth"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
i-core = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
