[package]
name = "i-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "appcore"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
