[package]
name = "i-gallery"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "gallery"
path = "src/lib.rs"

[dependencies]
i-core = { workspace = true }
i-auth = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
