[package]
name = "i-gallery"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "gallery"
path = "src/lib.rs"

[dependencies]
i-core = { workspace = true }
i-auth = { workspace = true }
# Workspace axum has no "multipart" feature; enable it here for the upload
# endpoint. Cargo unifies features, so this is additive for the whole build.
axum = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }

# MinIO (S3) client over rustls with the *ring* crypto provider — matching the
# rest of the workspace (sqlx tls-rustls → ring) and, crucially, avoiding
# aws-lc-rs, whose build needs cmake/NASM that the api container doesn't have.
# We take the SDK/config with default-features off (no default aws-lc client)
# and pin the TLS backend explicitly via aws-smithy-runtime's rustls-ring path.
# `rt-tokio` supplies the default async sleep (TokioSleep) the S3 client needs
# for retry/timeout — without it `from_conf` panics at runtime ("An async sleep
# implementation is required"). `rustls` wires the HTTPS connector (forced to the
# ring crypto provider via aws-smithy-http-client below, avoiding aws-lc-rs).
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
# Pull in the HTTP client's ring-backed rustls so the shared smithy client uses
# ring (not aws-lc-rs) as its crypto provider.
aws-smithy-http-client = { version = "1", default-features = false, features = ["rustls-ring"] }
aws-credential-types = "1"
