[package]
name = "i-monitor"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[lib]
name = "monitor"
path = "src/lib.rs"

[dependencies]
i-core = { workspace = true }
i-auth = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
