[package]
name = "api"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
i-core = { workspace = true }
i-db = { workspace = true }
i-auth = { workspace = true }
i-analytics = { workspace = true }
i-blog = { workspace = true }
i-music = { workspace = true }
i-gal = { workspace = true }
i-movie = { workspace = true }
i-touhou = { workspace = true }
i-device = { workspace = true }
i-comments = { workspace = true }
i-monitor = { workspace = true }
i-maimai = { workspace = true }
i-anime = { workspace = true }
i-moments = { workspace = true }
i-gallery = { workspace = true }
i-friends = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
